# 1c-contest

./: .gitignore  CMakeLists.txt  README.md
include/: common_types.hpp  file_entry.hpp  input.hpp  logic.hpp  macros.hpp
src/: file_entry.cpp  input.cpp  logic.cpp  main.cpp
